# DNA_SEQUENCE_TO_TRAIT_PREDICTION

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  FUTURE_FEATURES.md  LESSONS_LEARNED.md  Makefile  QUICKSTART.md  README.md  README.pypi.md  SECURITY.md  TODOS.md  minister_drive_ep4.py  pyproject.toml  run_mechanism_audit_detached.bat  run_stage1b_detached.bat  test_baseline.json
.claude/: testable-modules.md
2026-05-30-1200-ep4-pathotype/: approvals.md  audit-trail.md  intent-contract.md  recommendation.md  result.md
config/: datasources.yaml
dna_decode/: __init__.py  cli.py  decode_router.py  imputation.py
docs/: ARCHITECTURE.md  PYPI_FEATURE_MATRIX.md  PYPI_RELEASE_CHECKLIST.md  PYPI_VALIDATION_SUMMARY.md  announcement_draft.md  quickstart.md  validation.md
dogfood-observations/: minister-real-run-ep4-v01-2026-06-03.md  soraya-advance-ep4-interpret-2026-06-02.md  soraya-advance-ep4-v0resolver-2026-06-02.md  soraya-minister-ep4-2026-05-31.md  soraya-untilmvp-ep4-v0cli-2026-06-02.md
examples/: README.md
executed_plans/: Stage1_Refactor_And_Test_Hardening_Plan.md
innovate_killtests/: test_innovate_killtests_2026_07_13.py  test_innovate_round2_2026_07_13.py
notebooks/: J2_PHASE1_RUNBOOK.md  j2_phase1_esm2_proteingym.py  j2_phase2b_lora_finetune.py  mavedb_full_esm2_sharda_kaggle.py  mavedb_full_esm2_shardb_kaggle.py  mavedb_holdout_esm2_kaggle.py  mavedb_holdout_hybrid_kaggle.py  mavedb_pgx_esm2_kaggle.py
plans/: AMR_Portal_Tier34_Curation_Plan_2026-07-01.md  AMR_embedding_niche_decision_2026-06-05.md  Audit_Calibration_NT_AutoModel_Plan.md  Audit_Calibration_NT_AutoModel_Ship_Path_Plan.md  BVBRC_Genome_Metadata_Adapter_Plan.md  Broaden_Horizon_Dataset_Hunt_Plan_2026-07-02.md  CYP2D6_SNP_Cell_Build_Spec_2026-07-06.md  Cef_Audit_Aware_Packet_Design.md  Cef_Cached_Strain_V0_1_Slice_Plan.md  Cef_Mechanism_Audit_Plan.md  Cef_V0_1_Promotion_Slice_Plan.md  ChatGPT_Catalog_Usage_Plan_2026-07-02.md  Cipro_Decision_Bundle_Plan.md  Cipro_Decision_Bundle_Technical_Plan.md  Cipro_Post_Falsifier_Ship_Path_Technical_Plan.md  DNA_Decoder_v0_1_Genome_Input_Cipro_Plan.md  EP1_EP2_Cross_Drug_Synthesis_Plan.md  EP2_Cef_Tet_Smoke_Design_Plan.md  EP6_Carbon_Utilization_Substrate.md  EP7_Fungal_AMR_Substrate.md  EP8_Arabidopsis_Embedding_Test.md  EP8_PathB_PreStage_Manifest.md  EP8_PathB_PreStage_brainstorm.md  EP_1A_Public_Genome_Selection_Memo.md  EP_1B_External_Benchmark_Panel_Memo.md  EP_1_5_Architecture_Decision_Packet.md  EP_4_Non_AMR_Phenotype_Candidates.md  EP_4_Pathotype_Discovery_Closeout_Memos_Plan.md  EP_4_Pathotype_Idea_Anchor_Draft.md  EP_PGx_CYP2C19_Cell_Scoping_2026-06-25.md  EP_PGx_Independent_Functional_Evidence_Plan_2026-06-25.md  Ecoli_G2P_Phase1_Closeout_Plan.md  Ecoli_G2P_Phase1_Ship_Path_Plan.md  Ecoli_G2P_Platform_Technical_Plan.md  Eukaryotic_DualMachine_Coordination.md  GENOME_JEPA_CLIP_Decoder_Plan_2026-07-04.md  GENOME_JEPA_J2_Protein_Representation_Technical_Plan_2026-07-04.md  GENOME_WORLD_MODEL_Scoping_Brief_2026-07-04.md  Gene_Presence_AUROC_Bug_Fix_Plan.md  Genome_World_Model_Creative_Data_Reuse_Plan_2026-07-11.md  (+28 more)
project_state/: dna-decode-2026-05-11.md  ecoli-pathotype-prediction-cli-2026-05-26.md  eukaryotic-trait-decoding-cycle-2026-06-07.md
research_outputs/: _claim_promotion_register.md  _followup_queue.md  aav-gene-therapy-preexisting-nab-eligibility-2026-07-14.md  aav-gene-therapy-preexisting-nab-eligibility-2026-07-14.raw.md  aav-gene-therapy-preexisting-nab-eligibility-2026-07-14_unsupported.md  acquirable-ecoli-phenotype-label-sources-2026-06-14.md  acquirable-ecoli-phenotype-label-sources-2026-06-14.raw.md  acquirable-ecoli-phenotype-label-sources-2026-06-14_unsupported.md  acquirable-label-sources-2026-06-16.md  all-of-us-prs-ancestry-stratified-accuracy-2025-2026-05-23.md  all-of-us-prs-ancestry-stratified-accuracy-2025-2026-05-23.raw.md  all-of-us-prs-ancestry-stratified-accuracy-2025-2026-05-23_unsupported.md  cauris-wgs-mic-cohort-sources-2026-06-07.raw.md  cyp2d6-cyp2d7-psv-hybrid-identity-2026-07-07.md  cyp2d6-cyp2d7-psv-hybrid-identity-2026-07-07.raw.md  cyp2d6-cyp2d7-psv-hybrid-identity-2026-07-07_unsupported.md  ddg-to-fold-change-calibration-drug-resistance-2026-07-09.md  ddg-to-fold-change-calibration-drug-resistance-2026-07-09.raw.md  ddg-to-fold-change-calibration-drug-resistance-2026-07-09_unsupported.md  dna_decoder_phase4_gate_a_pass_2026-05-28.md  ecoli-amr-revalidation-source-portfolio-2026-06-14.md  ecoli-amr-revalidation-source-portfolio-2026-06-14.raw.md  ecoli-amr-revalidation-source-portfolio-2026-06-14_unsupported.md  ecoli-bacterial-phenotype-decoder-substrate-feasibility-2026-06-05.md  ecoli-bacterial-phenotype-decoder-substrate-feasibility-2026-06-05.raw.md  ecoli-bacterial-phenotype-decoder-substrate-feasibility-2026-06-05_unsupported.md  ecoli-pathotype-labeled-genome-substrate-survey-2026-05-27.md  ecoli-pathotype-labeled-genome-substrate-survey-2026-05-27.raw.md  ecoli-pathotype-labeled-genome-substrate-survey-2026-05-27_unsupported.md  ep1-suspend-gate-pathotype-reuse-feasibility-2026-05-27.md  etec_reference_vonmentzer_2026-05-30.md  etec_reference_vonmentzer_strains_2026-05-30.csv  etec_vonmentzer_collection_gca_2026-05-30.csv  eukaryotic-multimodal-substrate-feasibility-2026-06-07.md  eukaryotic-multimodal-substrate-feasibility-2026-06-07.raw.md  eukaryotic-multimodal-substrate-feasibility-2026-06-07_unsupported.md  expec_rule_external_validity_2026-06-04.md  free-genotype-paired-phenotype-substrates-2026-07-16.md  free-genotype-paired-phenotype-substrates-2026-07-16.raw.md  free-genotype-paired-phenotype-substrates-2026-07-16_unsupported.md  (+53 more)
scripts/: abo_full_opensnp_validate.py  abo_opensnp_ingest.py  abo_pgp_validate.py  abo_region_extract.py  amr_falsifier.py  amr_portal_curated_score.py  amr_portal_explore_newcells.py  amr_portal_feasibility.py  amr_portal_score_independent.py  amr_portal_tb_cohort.py  amr_predict.py  ar_bank_caur_micafungin_finalize.py  ar_bank_caur_powered_finalize.py  ar_bank_caur_validate.py  ar_bank_gono_validate.py  assemble_sra_cohort.py  (+294 more)
(+1661 files in other folders)
