[project]
name = "dna_decode"
version = "0.0.1"
description = "Genotype-to-phenotype inference platform — predicts phenotypic traits from genomic DNA sequences with biological interpretability. Phase 1: E. coli antibiotic resistance."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mmdebrahimi" }]

dependencies = [
    # Sequence + annotation parsing
    "biopython>=1.83",
    "pyyaml>=6.0",

    # ML core
    "torch>=2.2",
    "transformers>=4.40",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",

    # Cache + tabular I/O
    "h5py>=3.10",
    "pyarrow>=15",

    # HTTP for ingestion
    "requests>=2.31",

    # Test runner — kept in default deps so `uv sync` Just Works for running
    # tests (Wave 1.5 hardening C3 — previously buried in [optional-dependencies].dev,
    # which silently broke the documented `uv run pytest` flow).
    "pytest>=8",
]

[project.optional-dependencies]
# Dev tooling (lint + coverage) not needed for basic test runs
dev = [
    "pytest-cov>=5",
    "ruff>=0.4",
]

# Heavy ML deps that fail on some platforms (Phase 1 default is 4-bit Evo
# quantization on RTX 4090; bitsandbytes wheel is Linux/CUDA only — Windows
# users either run via WSL2 or skip 4-bit and run Evo in 16-bit on A100).
# Captum intentionally NOT in Phase 1 deps — deferred to Phase 2 per
# post-tech-plan brainstorm C1 (XGBoost is non-differentiable; Captum IG
# requires differentiable MLP head not built until Phase 2).
quantize = [
    "bitsandbytes>=0.43; platform_system != 'Windows'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dna_decode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line-too-long handled by formatter
