[project]
name = "dna_decode"
version = "0.3.5"
description = "Genotype-to-phenotype inference platform — predicts phenotypic traits from genomic DNA sequences with biological interpretability. Deterministic mechanism-feature decoders: E. coli AMR (cipro/cef/tet) + pathotype."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mmdebrahimi" }]

dependencies = [
    # Sequence + annotation parsing
    "biopython>=1.83",
    "pyyaml>=6.0",

    # ML core
    "torch>=2.2",
    # Pinned to 4.x: DNABERT-2 / Nucleotide Transformer / GENA-LM ship
    # trust_remote_code modeling files written against transformers 4.x APIs.
    # Transformers 5.x removed `find_pruneable_heads_and_indices` and changed
    # `BertConfig.pad_token_id`, breaking those remote files. Re-evaluate when
    # model authors publish 5.x-compatible code.
    "transformers>=4.40,<5",
    "einops>=0.7",          # DNABERT-2 modeling_bert.py imports einops at load time
    # DNABERT-2's flash-attention path imports `triton`. Linux ships triton via
    # pip; Windows uses the community `triton-windows` shim (registers as
    # `triton` on import). NT / GENA-LM don't need it.
    "triton>=2; platform_system != 'Windows'",
    "triton-windows>=3.0; platform_system == 'Windows'",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",

    # Cache + tabular I/O
    "h5py>=3.10",
    "pyarrow>=15",

    # HTTP for ingestion
    "requests>=2.31",

    # Test runner — kept in default deps so `uv sync` Just Works for running
    # tests (Wave 1.5 hardening C3 — previously buried in [optional-dependencies].dev,
    # which silently broke the documented `uv run pytest` flow).
    "pytest>=8",
]

# Console entry points. The pathotype v0 resolver is pure-stdlib (no torch/transformers
# needed at runtime); `dna-pathotype` exposes it as a command after `pip install -e .`.
[project.scripts]
dna-decode = "dna_decode.cli:main"          # unified entry — dispatches to the trait decoders
dna-pathotype = "dna_decode.pathotype.cli:main"
dna-amr = "dna_decode.amr.cli:main"

[project.optional-dependencies]
# Dev tooling (lint + coverage) not needed for basic test runs
dev = [
    "pytest-cov>=5",
    "ruff>=0.4",
]

# Heavy ML deps that fail on some platforms (Phase 1 plan assumed 4-bit Evo
# on RTX 4090; project's actual GPU is GTX 860M CC=5.0 so bitsandbytes is
# structurally unavailable — requires CC ≥ 7.0. NT v2 100M is the working
# foundation model. bitsandbytes wheel is Linux/CUDA only — Windows users
# either run via WSL2 or skip 4-bit and run Evo in 16-bit on A100).
# Captum intentionally NOT in Phase 1 deps — deferred to Phase 2 per
# post-tech-plan brainstorm C1 (XGBoost is non-differentiable; Captum IG
# requires differentiable MLP head not built until Phase 2).
quantize = [
    "bitsandbytes>=0.43; platform_system != 'Windows'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dna_decode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
markers = [
    "slow: tests that require GPU + large model downloads (excluded by default in CI)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line-too-long handled by formatter

# CUDA 11.8 torch wheel index for the local Windows + GTX 860M (Maxwell, compute
# cap 5.0). Maxwell is deprecated in CUDA 12.x; cu118 is the supported path.
# Without this, `uv sync` resolves torch+cpu and CUDA inference falls back to
# CPU. The `explicit = true` keeps the cu118 index from being used for any
# other package (only consulted when a [tool.uv.sources] entry routes here).
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
